# Gazo-san

./: .codeclimate.yml  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.circleci/: build_googletest.sh  config.yml  cxxops.sh
src/: imageDiffCalc.cpp  main.cpp
tests/: build_googletest.sh
tests/integration_tests/: imageDiffCalc_test.cpp
tests/system_tests/: imageDiffCalc_test.cpp
tests/unit_tests/: imageDiffCalc_test.cpp
